# ai-context

./: .gitignore  README.md  ai-context.bat  ai-context.py  ai_context.py  pyproject.toml  setup.py
ai_context.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
